Update to CLDR v37.

--- a/resources/language/bg.json
+++ b/resources/language/bg.json
@@ -84,7 +84,7 @@
 	"ky": "киргизки",
 	"zh": "китайски",
 	"zh-Hans": "китайски (опростен)",
-	"zh-Hant": "китайски (традиционна)",
+	"zh-Hant": "китайски (традиционен)",
 	"khq": "койра чиини",
 	"ses": "койраборо сени",
 	"sw-CD": "конгоански суахили",
