--- a/resources/language/bs.json
+++ b/resources/language/bs.json
@@ -145,7 +145,6 @@
 	"nyn": "njankole",
 	"de": "njemački",
 	"de-AT": "njemački (Austrija)",
-	"de-CH": "njemački (Švicarska)",
 	"gsw": "njemački (Švicarska)",
 	"or": "odija",
 	"om": "oromo",
@@ -210,6 +209,7 @@
 	"wa": "valun",
 	"cy": "velški",
 	"vi": "vijetnamski",
+	"de-CH": "visoki njemački (Švicarska)",
 	"wo": "volof",
 	"vun": "vunjo",
 	"fy": "zapadni frizijski",
