--- a/resources/language/ga.json
+++ b/resources/language/ga.json
@@ -12,7 +12,7 @@
 	"ast": "Astúiris",
 	"asa": "Asu",
 	"ksf": "Bafia",
-	"bm": "Bambara",
+	"bm": "Bambairis",
 	"bas": "Basaa",
 	"eu": "Bascais",
 	"be": "Bealarúisis",
@@ -51,12 +51,12 @@
 	"kok": "Concáinis",
 	"hr": "Cróitis",
 	"da": "Danmhairgis",
-	"dua": "Duala",
+	"dua": "Duailis",
+	"ee": "Éabhais",
+	"ewo": "Éabhandóis",
 	"he": "Eabhrais",
 	"et": "Eastóinis",
 	"ebu": "Embu",
-	"ee": "Ewe",
-	"ewo": "Ewondo",
 	"fo": "Faróis",
 	"fil": "Filipínis",
 	"fi": "Fionlainnis",
