--- a/resources/language/kok.json
+++ b/resources/language/kok.json
@@ -32,7 +32,7 @@
 	"ga": "ऐरिष",
 	"de-AT": "ऑस्ट्रियन जर्मन",
 	"en-AU": "ऑस्ट्रेलियन इंग्लीश",
-	"or": "ओरिया",
+	"or": "ओडिया",
 	"om": "ओरोमो",
 	"os": "ओसेटिक",
 	"kam": "कंबा",
@@ -52,8 +52,8 @@
 	"rw": "किन्यार्वान्डा",
 	"ky": "किर्गिज़",
 	"ku": "कुर्दिष",
-	"en-CA": "कॅनाडीयन इंग्लीश",
-	"fr-CA": "कॅनाडीयन फ्रेन्च",
+	"en-CA": "कॅनडियन इंग्लीश",
+	"fr-CA": "कॅनडियन फ्रेंच",
 	"tzm": "केंद्रीय अटलास तामाझायट",
 	"kok": "कोंकणी",
 	"khq": "कोयरा छिनी",
@@ -111,19 +111,19 @@
 	"jgo": "न्गोंबा",
 	"nus": "न्युयर",
 	"pa": "पंजाबी",
-	"fa": "पर्सियन",
+	"fa": "पर्शियन",
 	"fy": "पश्चिमी फ्रिशियन",
 	"zh-Hant": "पारंपारीक चिनी",
 	"ps": "पाष्टो",
-	"pt": "पोर्तुगिज",
-	"pl": "पोलिष",
-	"zgh": "प्रमाणित मोरोक्कन तामाझायट",
+	"pl": "पॉलीश",
+	"pt": "पोर्तुगीज",
+	"zgh": "प्रमाणीत मॉरोक्कन तमाझीट",
 	"fi": "फिन्निष्",
 	"fil": "फिलिपिनो",
 	"ff": "फुला",
 	"fo": "फेरोस्",
 	"fur": "फ्रिलियन",
-	"fr": "फ्रेन्च",
+	"fr": "फ्रेंच",
 	"nl-BE": "फ्लेमिश",
 	"bm": "बंबारा",
 	"my": "बर्मीज़्",
@@ -154,32 +154,32 @@
 	"mt": "मालतीस्",
 	"mua": "मुडांग",
 	"mi": "मुरी",
-	"es-MX": "मेक्सिकन स्पॅनिश",
+	"es-MX": "मॅक्सिकन स्पॅनीश",
 	"mgo": "मेटा",
 	"mer": "मेरू",
 	"mfe": "मोरिसेन",
 	"ro-MD": "मोल्डावियन्",
 	"yav": "यांगबेन",
 	"uk": "युक्रेनियन्",
-	"pt-PT": "युरोपियन पोर्तुगिज",
+	"pt-PT": "युरोपियन पोर्तुगीज",
 	"yo": "यूरुबा",
 	"rwk": "रवा",
 	"ru": "रशियन",
 	"rn": "रुंदी",
-	"rm": "रोमांन्श",
-	"ro": "रोमानियन्",
+	"ro": "रोमानियन",
+	"rm": "रोमान्श",
 	"rof": "रोम्बो",
 	"lb": "लक्सेमबर्गीश",
 	"lag": "लांगी",
 	"lo": "लाओ",
 	"lkt": "लाकोटा",
 	"lv": "लाट्वियन् (लेट्टिष्)",
+	"es-419": "लातीं अमेरिकन स्पॅनीश",
 	"ln": "लिंगाला",
 	"lt": "लिथुआनियन्",
 	"luo": "लुओ",
 	"lu": "लुबा-काटांगा",
 	"luy": "लुय",
-	"es-419": "लॅटिन अमेरिकन स्पॅनिश",
 	"dsb": "लोवर सोर्बियन",
 	"vai": "वाई",
 	"wa": "वालून",
@@ -187,30 +187,30 @@
 	"vi": "वियत्नामीज़",
 	"vun": "वुंजो",
 	"cy": "वेळ्ष्",
-	"ksb": "शंबाला",
+	"ksb": "शांबाला",
 	"sn": "शोना",
 	"sah": "सखा",
 	"sr": "सर्बियन",
 	"sbp": "सांगू",
-	"sg": "सांग्रो",
-	"saq": "सांबारु",
+	"sg": "सांगो",
+	"saq": "साम्बरू",
 	"sd": "सिंधी",
 	"ii": "सिच्युआन यी",
-	"si": "सिन्हलीस्",
+	"si": "सिनहालीस",
 	"ceb": "सिबौना",
 	"seh": "सेना",
 	"zh-Hans": "सोंपी चिनी",
 	"xog": "सोगा",
 	"so": "सोमाली",
-	"gd": "स्काटस् गेलिक्",
-	"es": "स्पॅनिश",
+	"gd": "स्कॉटीश गॅलीक",
+	"es": "स्पॅनीश",
 	"sk": "स्लोवाक",
-	"sl": "स्लोवेनियन्",
+	"sl": "स्लोवानियन",
 	"sw": "स्वाहिली",
 	"gsw": "स्विज जर्मन",
-	"fr-CH": "स्वीझ फ्रेन्च",
-	"de-CH": "स्वीझ म्हान जर्मन",
-	"sv": "स्वीदीष",
+	"fr-CH": "स्विझ फ्रेंच",
+	"de-CH": "स्विझ हाय जर्मन",
+	"sv": "स्विडीश",
 	"hu": "हंगेरियन्",
 	"haw": "हवायियान",
 	"hi": "हिन्दी",
