--- a/resources/language/lb.json
+++ b/resources/language/lb.json
@@ -104,7 +104,6 @@
 	"lb": "Lëtzebuergesch",
 	"ln": "Lingala",
 	"lt": "Litauesch",
-	"nds-NL": "Low Saxon",
 	"lu": "Luba-Katanga",
 	"luo": "Luo-Sprooch",
 	"jmc": "Machame",
@@ -133,6 +132,7 @@
 	"nnh": "Ngiemboon",
 	"jgo": "Ngomba",
 	"nds": "Nidderdäitsch",
+	"nds-NL": "Nidderdäitsch (Holland)",
 	"dsb": "Niddersorbesch",
 	"nd": "Nord-Ndebele-Sprooch",
 	"se": "Nordsamesch",
