--- a/resources/language/lv.json
+++ b/resources/language/lv.json
@@ -139,7 +139,7 @@
 	"naq": "nama",
 	"ne": "nepāliešu",
 	"nnh": "ngjembūnu",
-	"jgo": "Ngomba",
+	"jgo": "ngomba",
 	"nb": "norvēģu bukmols",
 	"nus": "nueru",
 	"nyn": "ņankolu",
